Fix Text Alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -93,6 +93,7 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: left;
     width: 50%;
     margin-bottom: 0.5rem;
     box-sizing: border-box; 
@@ -285,7 +286,7 @@ html {
 }
 
 .text-container p {
-    text-align: justify;
+    text-align: left;
 }
 
 
@@ -372,7 +373,7 @@ html {
 .prototype-container p {
     font-size: 120%;
     line-height: 1.6;
-    text-align: justify;
+    text-align: left;
     margin-bottom: 1rem;
 }
 
